--- a/index.html
+++ b/index.html
@@ -5,45 +5,68 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+<link rel="stylesheet" href="styles.css">
   <title>Frontend Mentor | Single Price Grid Component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-  Join our community
+  <div class="grid1">
+    <h2>Join our community</h2>
 
-  30-day, hassle-free money back guarantee
+    <p class="firstp">
+      30-day, hassle-free money back guarantee
+    </p>
+<p class="secondp">
+    Gain access to our full library of tutorials along with expert code reviews.
+    Perfect for any developers who are serious about honing their skills.
+  </p>
 
-  Gain access to our full library of tutorials along with expert code reviews. 
-  Perfect for any developers who are serious about honing their skills.
 
-  Monthly Subscription
-
-  &dollar;29 per month
-
+  </div>
+  <div class="grid2">
+  <h2>Monthly Subscription</h2>
+  <p class="firstp">
+    <span class="dollar">&dollar;29</span> <span class="permth">per month</span>
+  </p>
+<p class="secondp">
   Full access for less than &dollar;1 a day
-
-  Sign Up
-
-  Why Us
-
-  Tutorials by industry experts
-  Peer &amp; expert code review
-  Coding exercises
-  Access to our GitHub repos
+</p>
+  <button>Sign Up</button>
+</div>
+<div class="grid3">
+  <h2>Why Us</h2>
+<p>
+  <ul>
+    <li>
+      Tutorials by industry experts
+    </li>
+    <li>
+      Peer &amp; expert code review
+    </li>
+    <li>
+      Coding exercises
+    </li>
+    <li>
+      Access to our GitHub repos
+    </li>
+  <li>
   Community forum
-  Flashcard decks
-  New videos every week
-  
+  </li>
+  <li>
+    Flashcard decks
+  </li>
+  <li>
+    New videos every week
+  </li>
+
+  </ul>
+</p>
+
+  </div>
   <footer>
     <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="#">Riri A.</a>.
     </p>
   </footer>
 </body>
